[package]
name = "bastor"
version = "0.1.0"
edition = "2021"
authors = ["Tuong Nguyen <tuongn09@gmail.com>"]
description = "A wrapper helps implementing actor with Bastion more easier with self-implemented state"
documentation = "https://docs.rs/bastor"
readme = "README.md"
repository = "https://github.com/zrus/bastor"
keywords = ["actor", "bastion", "actor model"]

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]

[lib]
doctest = true

[features]
scaling = ["bastion/scaling"]

[dependencies]
# Core processes
bastion = { version = "0.4.5", features = ["tokio-runtime", "scaling"] }
tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"

[dev-dependencies]
cqrs-es = "0.4"
serde = "1.0"

[[example]]
name = "my_inbox"
